mdapipkg/objects/Checkout_Log__c.object
<CustomObject>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check/Wire</fullName>
                </value>
                <value>
                    <fullName>Payment Card</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Sucessfull__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If credit card payment was processed successfully.</description>
        <inlineHelpText>If credit card payment was processed successfully.</inlineHelpText>
        <label>Payment Successfull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Payment_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Payment Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Date_Time__c</fullName>
        <description>Timestamp when submit was clicked.</description>
        <inlineHelpText>Timestamp when submit was clicked.</inlineHelpText>
        <label>Submission Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>User Id of currently logged in User.</description>
        <inlineHelpText>User Id of currently logged in User.</inlineHelpText>
        <label>User Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Checkout Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Payment_Sucessfull__c</columns>
        <columns>Post_Payment_Updates__c</columns>
        <columns>Submission_Date_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>User_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LynnView</fullName>
        <columns>NAME</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Payment_Sucessfull__c</columns>
        <columns>Post_Payment_Updates__c</columns>
        <columns>Submission_Date_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>User_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>cheo</value>
        </filters>
        <label>Lynns View</label>
    </listViews>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>